--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -10,26 +10,26 @@
     <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/editText3"></EditText>
     <LinearLayout android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:layout_width="match_parent">
         <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_weight="2" android:text="@string/track_location"></TextView>
-        <ToggleButton android:layout_width="wrap_content" android:text="ToggleButton" android:layout_height="wrap_content" android:id="@+id/toggleButton1"></ToggleButton>
+        <ToggleButton android:layout_width="wrap_content" android:text="ToggleButton" android:layout_height="wrap_content" android:id="@+id/trackLocationButton"></ToggleButton>
     </LinearLayout>
     <LinearLayout android:id="@+id/linearLayout2" android:layout_height="wrap_content" android:layout_width="match_parent">
         <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_weight="2" android:text="@string/engine"></TextView>
-        <ToggleButton android:text="ToggleButton" android:id="@+id/toggleButton2" android:layout_width="wrap_content" android:layout_height="wrap_content"></ToggleButton>
+        <ToggleButton android:text="ToggleButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/engineButton"></ToggleButton>
     </LinearLayout>
     <LinearLayout android:id="@+id/linearLayout3" android:layout_height="wrap_content" android:layout_width="match_parent">
         <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView6" android:text="@string/speed" android:layout_weight="2"></TextView>
-        <EditText android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="wrap_content" android:id="@+id/editText4" android:inputType="numberDecimal" android:numeric="decimal" android:enabled="true" android:editable="false"></EditText>
+        <EditText android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="wrap_content" android:inputType="numberDecimal" android:numeric="decimal" android:enabled="true" android:editable="false" android:id="@+id/speedView" android:focusable="false" android:focusableInTouchMode="false"></EditText>
     </LinearLayout>
     <LinearLayout android:id="@+id/linearLayout4" android:layout_height="wrap_content" android:layout_width="match_parent">
         <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView7" android:text="@string/heading" android:layout_weight="2"></TextView>
-        <EditText android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="wrap_content" android:id="@+id/editText5" android:inputType="number" android:editable="false"></EditText>
+        <EditText android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="wrap_content" android:inputType="number" android:editable="false" android:id="@+id/headingView" android:focusable="false" android:focusableInTouchMode="false"></EditText>
     </LinearLayout>
     <LinearLayout android:id="@+id/linearLayout5" android:layout_height="wrap_content" android:layout_width="match_parent">
         <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView8" android:text="@string/latitude" android:layout_weight="2"></TextView>
-        <EditText android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="wrap_content" android:id="@+id/editText6" android:editable="false"></EditText>
+        <EditText android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="wrap_content" android:editable="false" android:id="@+id/latitudeView" android:focusable="false" android:focusableInTouchMode="false"></EditText>
     </LinearLayout>
     <LinearLayout android:id="@+id/linearLayout5" android:layout_height="wrap_content" android:layout_width="match_parent">
         <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView8" android:text="@string/longitude" android:layout_weight="2"></TextView>
-        <EditText android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="wrap_content" android:id="@+id/editText6" android:editable="false"></EditText>
+        <EditText android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="wrap_content" android:editable="false" android:id="@+id/longitudeView" android:focusable="false" android:focusableInTouchMode="false"></EditText>
     </LinearLayout>
  </LinearLayout>
