--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -14,23 +14,7 @@
         <ToggleButton android:text="ToggleButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/engineButton"></ToggleButton>
     </LinearLayout>
      -->
-    <TableLayout android:id="@+id/tableLayout1" android:layout_height="wrap_content" android:layout_width="match_parent">
-        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
-	  <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView6" android:text="@string/speed" android:layout_weight="2"></TextView>
-	  <EditText android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="wrap_content" android:inputType="numberDecimal" android:numeric="decimal" android:enabled="true" android:editable="false" android:id="@+id/speedView" android:focusable="false" android:focusableInTouchMode="false"></EditText>
-	</TableRow>
-        <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
-	  <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView7" android:text="@string/heading" android:layout_weight="2"></TextView>
-	  <EditText android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="wrap_content" android:inputType="number" android:editable="false" android:id="@+id/headingView" android:focusable="false" android:focusableInTouchMode="false"></EditText>
-	</TableRow>
-        <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
-	  <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView8" android:text="@string/latitude" android:layout_weight="2"></TextView>
-	  <EditText android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="wrap_content" android:editable="false" android:id="@+id/latitudeView" android:focusable="false" android:focusableInTouchMode="false"></EditText>
-	</TableRow>
-        <TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
-        <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView8" android:text="@string/longitude" android:layout_weight="2"></TextView>
-        <EditText android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="wrap_content" android:editable="false" android:id="@+id/longitudeView" android:focusable="false" android:focusableInTouchMode="false"></EditText>
-	</TableRow>
-    </TableLayout>
+    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent" android:id="@+id/speedHeading" android:text="@string/empty"></TextView>
+    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent" android:id="@+id/position" android:text="@string/empty"></TextView>
     <ProgressBar android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/progressBar1"></ProgressBar>
  </LinearLayout>
