--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,17 +4,134 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:weightSum="1">
-    <LinearLayout android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:layout_width="match_parent">
-        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_weight="2" android:text="@string/track_location"></TextView>
-        <ToggleButton android:layout_width="wrap_content" android:text="ToggleButton" android:layout_height="wrap_content" android:id="@+id/trackLocationButton"></ToggleButton>
+    <LinearLayout 
+        android:id="@+id/linearLayout1" 
+        android:layout_height="wrap_content" 
+        android:layout_width="match_parent">
+        
+        <TextView 
+            android:textAppearance="?android:attr/textAppearanceMedium" 
+            android:layout_height="wrap_content" 
+            android:id="@+id/textView4" 
+            android:layout_width="0dip" 
+            android:layout_weight="2" 
+            android:text="@string/track_location"/>
+        
+        <ToggleButton 
+            android:layout_width="wrap_content" 
+            android:text="ToggleButton" 
+            android:layout_height="wrap_content" 
+            android:id="@+id/trackLocationButton"/>
     </LinearLayout>
-    <!--
-    <LinearLayout android:id="@+id/linearLayout2" android:layout_height="wrap_content" android:layout_width="match_parent">
-        <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_weight="2" android:text="@string/engine"></TextView>
-        <ToggleButton android:text="ToggleButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/engineButton"></ToggleButton>
+    
+    <TextView 
+        android:layout_height="wrap_content" 
+        android:textAppearance="?android:attr/textAppearanceMedium" 
+        android:layout_width="match_parent" 
+        android:id="@+id/speedHeading" 
+        android:text="@string/no_speed_heading_data"/>
+    
+    <TextView 
+        android:layout_height="wrap_content" 
+        android:textAppearance="?android:attr/textAppearanceMedium" 
+        android:layout_width="match_parent" 
+        android:id="@+id/position" 
+        android:text="@string/no_position_data"/>
+    
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="2" 
+            android:text="@string/engine"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <ToggleButton
+            android:id="@+id/engineStatusButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ToggleButton" />
+
     </LinearLayout>
-     -->
-    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent" android:id="@+id/speedHeading" android:text="@string/no_speed_heading_data"></TextView>
-    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent" android:id="@+id/position" android:text="@string/no_position_data"></TextView>
-    <ProgressBar android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/progressBar1"></ProgressBar>
+
+    <TableLayout
+        android:id="@+id/tableLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TableRow
+            android:id="@+id/tableRow1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+        	    android:id="@+id/textView2"
+            	android:layout_width="wrap_content"
+            	android:layout_height="wrap_content"
+           	    android:layout_weight="2"
+           		android:text="@string/sail_plan"
+            	android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        	<CheckBox
+        	    android:id="@+id/mainSailCheckbox"
+        	    android:layout_width="wrap_content"
+        	    android:layout_height="wrap_content"
+        	    android:text="@string/main_sail" />
+            
+        </TableRow> 
+
+        <TableRow
+            android:id="@+id/tableRow2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+        	    android:id="@+id/textView3"
+            	android:layout_width="wrap_content"
+            	android:layout_height="wrap_content"
+           	    android:layout_weight="2"
+           		android:text=""
+            	android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        	<CheckBox
+        	    android:id="@+id/jibCheckbox"
+        	    android:layout_width="wrap_content"
+        	    android:layout_height="wrap_content"
+        	    android:text="@string/jib" />
+            
+        </TableRow> 
+        
+        <TableRow
+            android:id="@+id/tableRow3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+        	    android:id="@+id/textView5"
+            	android:layout_width="wrap_content"
+            	android:layout_height="wrap_content"
+           	    android:layout_weight="2"
+           		android:text=""
+            	android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        	<CheckBox
+        	    android:id="@+id/spinnakerCheckbox"
+        	    android:layout_width="wrap_content"
+        	    android:layout_height="wrap_content"
+        	    android:text="@string/spinnaker" />
+            
+        </TableRow> 
+    </TableLayout>
+    
+    <ProgressBar 
+        android:layout_height="wrap_content" 
+        android:layout_width="wrap_content" 
+        android:id="@+id/progressBar1"/>
+    
+    
  </LinearLayout>
