--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,6 +4,33 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:weightSum="1">
+
+   	<LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/tripNameLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/trip_name"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <EditText
+            android:id="@+id/tripNameText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:focusable="false"
+            android:hint="@string/no_trip_selected"
+            android:inputType="none"
+            android:linksClickable="false" >
+
+            <requestFocus />
+        </EditText>
+
+    </LinearLayout>
+
     <LinearLayout 
         android:id="@+id/linearLayout1" 
         android:layout_height="wrap_content" 
