--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -73,8 +73,11 @@
         <EditText
             android:id="@+id/speedText"
             android:layout_weight="1"
-            android:inputType="numberDecimal"
+            android:clickable="false"
             android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:inputType="numberDecimal"
+            android:longClickable="false"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
       </TableRow>
@@ -85,7 +88,7 @@
           android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/textView2"
             android:layout_weight="1"
             android:text="@string/heading"
             android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -93,8 +96,11 @@
         <EditText
             android:id="@+id/headingText"
             android:layout_weight="1"
-            android:inputType="numberDecimal"
+            android:clickable="false"
             android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:inputType="numberDecimal"
+            android:longClickable="false"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
       </TableRow>
@@ -113,19 +119,22 @@
         <EditText
             android:id="@+id/latText"
             android:layout_weight="1"
-            android:inputType="none"
+            android:clickable="false"
             android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:inputType="none"
+            android:longClickable="false"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
       </TableRow>
 
       <TableRow
-          android:id="@+id/tableRow3"
+          android:id="@+id/tableRow4"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/textView4"
             android:layout_weight="1"
             android:text=""
             android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -133,8 +142,11 @@
         <EditText
             android:id="@+id/lonText"
             android:layout_weight="1"
-            android:inputType="none"
+            android:clickable="false"
             android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:inputType="none"
+            android:longClickable="false"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
       </TableRow>
