--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -9,16 +9,34 @@
                 android:layout_height="fill_parent"
                 android:weightSum="1">
 
-    <EditText
-        android:id="@+id/tripNameText"
+    <LinearLayout
+        android:id="@+id/tripNameLayout"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:focusable="false"
-        android:hint="@string/no_trip_selected"
-        android:inputType="none"
-        android:linksClickable="false" >
-      <requestFocus />
-    </EditText>
+        android:layout_height="wrap_content" >
+
+      <EditText
+          android:id="@+id/tripNameText"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_weight="4"
+          android:focusable="false"
+          android:hint="@string/no_trip_selected"
+          android:linksClickable="false" >
+        <requestFocus />
+      </EditText>
+
+      <ImageButton
+          android:id="@+id/selectTripButton"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:adjustViewBounds="false"
+          android:baselineAlignBottom="false"
+          android:cropToPadding="false"
+          android:padding="0dp"
+          android:src="@android:drawable/ic_input_add" />
+    </LinearLayout>
 
     <CheckBox
         android:layout_width="match_parent"
