--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -6,7 +6,7 @@
 
   <LinearLayout android:orientation="vertical"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_height="wrap_content"
                 android:weightSum="1">
 
     <LinearLayout
@@ -35,7 +35,8 @@
           android:baselineAlignBottom="false"
           android:cropToPadding="false"
           android:padding="0dp"
-          android:src="@android:drawable/ic_input_add" />
+          android:src="@android:drawable/ic_input_add"
+          android:contentDescription="@string/no_trip_selected" />
     </LinearLayout>
 
     <CheckBox
