--- a/res/layout/trip_edit.xml
+++ b/res/layout/trip_edit.xml
@@ -10,12 +10,6 @@
       <TableRow
           android:id="@+id/tableRow1"
           android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/tripDisplayName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
       </TableRow>
 
       <TableRow
@@ -102,6 +96,7 @@
             android:clickable="false"
             android:focusable="false"
             android:focusableInTouchMode="false"
+            android:hint="@string/first_entry"
             android:linksClickable="false"
             android:longClickable="false" >
 
@@ -116,8 +111,10 @@
             android:clickable="false"
             android:focusable="false"
             android:focusableInTouchMode="false"
+            android:hint="@string/last_entry"
             android:linksClickable="false"
             android:longClickable="false" >
+
           <requestFocus />
         </EditText>
       </TableRow>
@@ -215,10 +212,17 @@
             android:text="@string/save" />
 
         <Button
+            android:id="@+id/deleteThisButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/delete_this_trip" />
+
+        <Button
             android:id="@+id/selectThisButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
+            android:layout_weight="2"
             android:text="@string/select_this_trip" />
 
       </TableRow>
