--- a/res/layout/trip_edit.xml
+++ b/res/layout/trip_edit.xml
@@ -3,229 +3,227 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
-    <TableLayout
-        android:layout_width="match_parent"
+  <TableLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content" >
+
+    <TableRow
+        android:id="@+id/tableRow1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
 
-      <TableRow
-          android:id="@+id/tableRow1"
-          android:layout_height="wrap_content" >
-      </TableRow>
-
-      <TableRow
-          android:id="@+id/tableRow2"
+      <TextView
+          android:id="@+id/fromLabel"
           android:layout_width="wrap_content"
-          android:layout_height="wrap_content" >
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:text="@string/trip_from"
+          android:textAppearance="?android:attr/textAppearanceMedium" />
 
-        <TextView
-            android:id="@+id/fromLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/trip_from"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <EditText
-            android:id="@+id/fromText"
-            android:layout_weight="3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-          <requestFocus />
-        </EditText>
-      </TableRow>
-
-      <TableRow
-          android:id="@+id/tableRow3"
+      <EditText
+          android:id="@+id/fromText"
+          android:layout_weight="1"
           android:layout_width="wrap_content"
-          android:layout_height="wrap_content" >
+          android:layout_height="wrap_content"
+          android:lines="1" >
+        <requestFocus />
+      </EditText>
+    </TableRow>
 
-        <TextView
-            android:id="@+id/toLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/trip_to"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+    <TableRow
+        android:id="@+id/tableRow2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
 
-        <EditText
-            android:id="@+id/toText"
-            android:layout_weight="3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-          <requestFocus />
-        </EditText>
-      </TableRow>
-
-      <TableRow
-          android:id="@+id/tableRow4"
+      <TextView
+          android:id="@+id/toLabel"
           android:layout_width="wrap_content"
-          android:layout_height="wrap_content" >
-        <TextView
-            android:id="@+id/legNameLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/trip_name"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:text="@string/trip_to"
+          android:textAppearance="?android:attr/textAppearanceMedium" />
 
-        <EditText
-            android:id="@+id/legNameText"
-            android:layout_weight="3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-          <requestFocus />
-        </EditText>
-      </TableRow>
-
-      <TableRow
-          android:id="@+id/tableRowTimespanLabel"
+      <EditText
+          android:id="@+id/toText"
+          android:layout_weight="1"
           android:layout_width="wrap_content"
-          android:layout_height="wrap_content" >
-      </TableRow>
+          android:layout_height="wrap_content"
+          android:lines="1" >
+        <requestFocus />
+      </EditText>
+    </TableRow>
 
-      <TableRow
-          android:id="@+id/tableRowTimespan"
+    <TableRow
+        android:id="@+id/tableRow3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+      <TextView
+          android:id="@+id/legNameLabel"
           android:layout_width="wrap_content"
-          android:layout_height="wrap_content" >
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:text="@string/trip_name"
+          android:textAppearance="?android:attr/textAppearanceMedium" />
 
-        <EditText
-            android:id="@+id/startTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:clickable="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:hint="@string/first_entry"
-            android:linksClickable="false"
-            android:longClickable="false" >
+      <EditText
+          android:id="@+id/legNameText"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:lines="1" >
 
-          <requestFocus />
-        </EditText>
+        <requestFocus />
+      </EditText>
+    </TableRow>
 
-        <EditText
-            android:id="@+id/endTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:clickable="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:hint="@string/last_entry"
-            android:linksClickable="false"
-            android:longClickable="false" >
+    <TableRow
+        android:id="@+id/tableRow4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
 
-          <requestFocus />
-        </EditText>
-      </TableRow>
-
-      <TableRow
-          android:id="@+id/tableRow5"
+      <EditText
+          android:id="@+id/startTime"
           android:layout_width="wrap_content"
-          android:layout_height="wrap_content" >
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:clickable="false"
+          android:focusable="false"
+          android:focusableInTouchMode="false"
+          android:hint="@string/first_entry"
+          android:linksClickable="false"
+          android:longClickable="false"
+          android:lines="1" >
 
-        <TextView
-            android:id="@+id/totalDistanceLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/total_distance"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+        <requestFocus />
+      </EditText>
 
-        <EditText
-            android:id="@+id/totalDistanceText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:clickable="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:linksClickable="false"
-            android:longClickable="false" >
-
-          <requestFocus />
-        </EditText>
-      </TableRow>
-
-      <TableRow
-          android:id="@+id/tableRow6"
+      <EditText
+          android:id="@+id/endTime"
           android:layout_width="wrap_content"
-          android:layout_height="wrap_content" >
-        <TextView
-            android:id="@+id/totalSailingTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/total_sailing_time"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:clickable="false"
+          android:focusable="false"
+          android:focusableInTouchMode="false"
+          android:hint="@string/last_entry"
+          android:linksClickable="false"
+          android:longClickable="false"
+          android:lines="1" >
 
-        <EditText
-            android:id="@+id/totalSailingTimeText"
-            android:layout_weight="3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:linksClickable="false"
-            android:longClickable="false" >
-          <requestFocus />
-        </EditText>
-      </TableRow>
+        <requestFocus />
+      </EditText>
+    </TableRow>
 
-      <TableRow
-          android:id="@+id/tableRow7"
+    <TableRow
+        android:id="@+id/tableRow5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+
+      <TextView
+          android:id="@+id/totalDistanceLabel"
           android:layout_width="wrap_content"
-          android:layout_height="wrap_content" >
-        <TextView
-            android:id="@+id/totalEngineTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/total_engine_time"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:text="@string/total_distance"
+          android:textAppearance="?android:attr/textAppearanceMedium" />
 
-        <EditText
-            android:id="@+id/totalEngineTimeText"
-            android:layout_weight="3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:linksClickable="false"
-            android:longClickable="false" >
-          <requestFocus />
-        </EditText>
-      </TableRow>
-
-      <TableRow
-          android:id="@+id/tableRow8"
+      <EditText
+          android:id="@+id/totalDistanceText"
           android:layout_width="wrap_content"
-          android:layout_height="wrap_content">
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:clickable="false"
+          android:focusable="false"
+          android:focusableInTouchMode="false"
+          android:linksClickable="false"
+          android:longClickable="false"
+          android:lines="1" >
 
-        <Button
-            android:id="@+id/saveTripButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/save" />
+        <requestFocus />
+      </EditText>
+    </TableRow>
 
-        <Button
-            android:id="@+id/deleteThisButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="@string/delete_this_trip" />
+    <TableRow
+        android:id="@+id/tableRow6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+      <TextView
+          android:id="@+id/totalSailingTime"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:text="@string/total_sailing_time"
+          android:textAppearance="?android:attr/textAppearanceMedium" />
 
-        <Button
-            android:id="@+id/selectThisButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="@string/select_this_trip" />
+      <EditText
+          android:id="@+id/totalSailingTimeText"
+          android:layout_weight="1"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:clickable="false"
+          android:focusable="false"
+          android:focusableInTouchMode="false"
+          android:linksClickable="false"
+          android:longClickable="false"
+          android:lines="1" >
+        <requestFocus />
+      </EditText>
+    </TableRow>
 
-      </TableRow>
-    </TableLayout>
+    <TableRow
+        android:id="@+id/tableRow7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+      <TextView
+          android:id="@+id/totalEngineTime"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:text="@string/total_engine_time"
+          android:textAppearance="?android:attr/textAppearanceMedium" />
+
+      <EditText
+          android:id="@+id/totalEngineTimeText"
+          android:layout_weight="1"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:clickable="false"
+          android:focusable="false"
+          android:focusableInTouchMode="false"
+          android:linksClickable="false"
+          android:longClickable="false"
+          android:lines="1" >
+        <requestFocus />
+      </EditText>
+    </TableRow>
+
+    <TableRow
+        android:id="@+id/tableRow8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+      <Button
+          android:id="@+id/saveTripButton"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:text="@string/save" />
+
+      <Button
+          android:id="@+id/deleteThisButton"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:text="@string/delete_this_trip" />
+
+      <Button
+          android:id="@+id/selectThisButton"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:text="@string/select_this_trip" />
+
+    </TableRow>
+  </TableLayout>
 
 </ScrollView>
