--- a/res/layout/trip_edit.xml
+++ b/res/layout/trip_edit.xml
@@ -8,6 +8,17 @@
       android:layout_height="wrap_content"
       android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
+      <requestFocus />
+      <!--  This dummy layout prevents the keyboard from popping
+           up when entering this view. -->
+    </LinearLayout>
+
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
@@ -27,8 +38,10 @@
             android:id="@+id/legNameText"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:lines="1" >
-          <requestFocus />
+            android:lines="1"
+            android:inputType="textCapSentences"
+            android:nextFocusDown="@+id/fromText"
+            android:imeOptions="actionNext">
         </EditText>
       </TableRow>
 
@@ -47,7 +60,10 @@
             android:id="@+id/fromText"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:lines="1" >
+            android:lines="1"
+            android:inputType="textCapWords"
+            android:nextFocusDown="@+id/toText"
+            android:imeOptions="actionNext">
         </EditText>
       </TableRow>
 
@@ -66,7 +82,9 @@
             android:id="@+id/toText"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:lines="1" >
+            android:lines="1"
+            android:inputType="textCapWords"
+            android:imeOptions="actionDone">
         </EditText>
       </TableRow>
 
